<resources>
    <string name="app_name">iplan</string>
    <string name="action_settings">Settings</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_email_hint">请再次输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>

    <string name="main_tab_message">消息</string>
    <string name="main_tab_contacted">好友</string>
    <string name="mian_tab_time">时间轴</string>
    <string name="mian_tab_myself">我的</string>

    <string name="add_avator">头像</string>
    <string name="add_sex">性别</string>
    <string name="add_age">年龄</string>
    <string name="add_birth">生日</string>
    <string name="add_name">用户名</string>
    <string name="agree">接受</string>
    <string name="new_friend">新的朋友</string>

    <string name="chat">聊天</string>
    <string name="add_friend">添加好友</string>

    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_share">分享</string>
    <string name="set_about_us">关于我们</string>
    <string name="set_problems">常见问题</string>
    <string name="set_help">帮助</string>

    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="logout">退出登陆</string>

    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="text_btn_save">保存</string>

</resources>
