<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/btn_homepgae"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#fff"
            android:drawableTop="@drawable/tab_set_btn"
            android:onClick="onTabSelect"
            android:paddingBottom="2dip"
            android:paddingTop="7dip"
            android:scaleType="matrix"
            android:text="@string/mian_tab_time"
            android:textColor="@drawable/tab_textcolor"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_conversation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                android:drawableTop="@drawable/tab_messages_btn"
                android:onClick="onTabSelect"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/main_tab_message"
                android:textColor="@drawable/tab_textcolor1"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/iv_conversation_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="30dp"
                android:layout_marginTop="7dp"
                android:background="@mipmap/msg_tips"
                android:contentDescription="@string/action_settings"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_contact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                android:drawableTop="@drawable/tab_contacted_btn"
                android:onClick="onTabSelect"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/main_tab_contacted"
                android:textColor="@drawable/tab_textcolor2"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/iv_contact_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="30dp"
                android:layout_marginTop="7dp"
                android:background="@mipmap/msg_tips"
                android:contentDescription="@string/action_settings"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:visibility="gone" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_set"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#fff"
            android:drawableTop="@drawable/tab_myself_btn"
            android:onClick="onTabSelect"
            android:paddingBottom="2dip"
            android:paddingTop="7dip"
            android:scaleType="matrix"
            android:text="@string/mian_tab_myself"
            android:textColor="@drawable/tab_textcolor3"
            android:textSize="12sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_bottom" />

</RelativeLayout>