<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yourname"
    android:orientation="vertical" >

    <include layout="@layout/include_navi" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="80dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <com.example.iplan.ui.CircleImageView
                android:id="@+id/iv_avator"
                android:layout_alignParentRight="true"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="55dp"
                android:layout_marginLeft="@dimen/margin_16"
                android:src="@mipmap/head" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#7f444444"
        >


        //分享
    <RelativeLayout
        android:id="@+id/layout_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:minHeight="50dp"
        android:padding="10dp" >
        <ImageView
            android:id="@+id/share_pic"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/share"/>

        <TextView
            style="@style/style_text_black"
            android:layout_toRightOf="@+id/share_pic"
            android:layout_centerVertical="true"
            android:text="@string/set_share"
            android:paddingLeft="10dp"
            android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/tv_set_share"
            style="@style/style_text_black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:drawablePadding="10dp"
            android:drawableRight="@mipmap/register_bottom_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_2"
        android:background="@drawable/base_horizontal_line" >
    </View>

    <RelativeLayout
        android:id="@+id/layout_about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:minHeight="50dp"
        android:padding="10dp">

    //关于我们
        <ImageView
            android:id="@+id/infoback1"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/infoback"/>

        <TextView
            style="@style/style_text_black"
            android:layout_toRightOf="@+id/infoback1"
            android:paddingLeft="10dp"
            android:layout_centerVertical="true"
            android:text="@string/set_about_us"
            android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/tv_set_about_us"
            style="@style/style_text_black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:drawablePadding="10dp"
            android:drawableRight="@mipmap/register_bottom_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_2"
        android:background="@drawable/base_horizontal_line" >
    </View>
        //常见问题
    <RelativeLayout
        android:id="@+id/layout_problems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:minHeight="50dp"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/infoback"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/infoback"/>

        <TextView
            style="@style/style_text_black"
            android:layout_toRightOf="@+id/infoback"
            android:paddingLeft="10dp"
            android:layout_centerVertical="true"
            android:text="@string/set_problems"
            android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/tv_set_problems"
            style="@style/style_text_black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:drawablePadding="10dp"
            android:drawableRight="@mipmap/register_bottom_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_2"
        android:background="@drawable/base_horizontal_line" >
    </View>



    <RelativeLayout
        android:id="@+id/layout_blacklist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/btn_selector"
        android:minHeight="50dp"
        android:padding="10dp" >

        <TextView
            style="@style/style_text_black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/set_blacklist"
            android:textColor="#ffffff"/>

        <TextView
            style="@style/style_text_black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:drawablePadding="10dp"
            android:drawableRight="@mipmap/register_bottom_arrow" />
    </RelativeLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_2"
        android:visibility="gone"
        android:background="@drawable/base_horizontal_line" >
    </View>

    <RelativeLayout
        android:id="@+id/rl_switch_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/btn_selector"
        android:padding="10dip" >

        <TextView
            style="@style/style_text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/set_notify"
            android:textColor="#ffffff"/>

        <ImageView
            android:id="@+id/iv_open_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@mipmap/on"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/iv_close_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@mipmap/off"
            android:visibility="invisible" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_2"
        android:visibility="gone"
        android:background="@drawable/base_horizontal_line" >
    </View>

    <RelativeLayout
        android:id="@+id/rl_switch_voice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/btn_selector"
        android:padding="10dip" >

        <TextView
            style="@style/style_text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/set_voice" />

        <ImageView
            android:id="@+id/iv_open_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@mipmap/on"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/iv_close_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@mipmap/off"
            android:visibility="invisible" />
    </RelativeLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_2"
        android:visibility="gone"
        android:background="@drawable/base_horizontal_line" >
    </View>

    <RelativeLayout
        android:id="@+id/rl_switch_vibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/btn_selector"
        android:padding="10dip" >

        <TextView
            style="@style/style_text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/set_vibrate" />

        <ImageView
            android:id="@+id/iv_open_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@mipmap/on"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/iv_close_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@mipmap/off"
            android:visibility="invisible" />
    </RelativeLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_2"
        android:visibility="gone"
        android:background="@drawable/base_horizontal_line" >
    </View>
    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        style="@style/style_button_logout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/logout" />



        </LinearLayout>
    </ScrollView>
</LinearLayout>