<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_new_friend"
    android:orientation="vertical" >
    <!--android:background="@color/theme_bg_color"-->
    <include layout="@layout/include_navi"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <!--android:background="#e0000000"-->
    <RelativeLayout
        android:id="@+id/layout_head"
        android:layout_width="match_parent"
        android:layout_height="540dp"
        android:minHeight="80dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/tv_name"
            style="@style/style_text_black"
            android:text="qq"
            android:textColor="#444444"
            android:textSize="30dp"
            android:drawablePadding="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/iv_avator"
            android:layout_toEndOf="@+id/iv_avator" />

        <com.example.iplan.ui.CircleImageView
            android:id="@+id/iv_avator"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/head"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </RelativeLayout>

            <LinearLayout
                android:id="@+id/bg_new_friend1"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:background="@drawable/bg_new_friend1"
                >

      //用户名
    <!--<RelativeLayout-->
        <!--android:id="@+id/layout_name"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@drawable/about_mid_bg"-->
        <!--android:padding="10dp" >-->

        <!--<TextView-->
            <!--style="@style/style_text_black"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:set_plan_layout="@string/add_name" />-->

        <!--<TextView-->
            <!--android:id="@+id/tv_name"-->
            <!--style="@style/style_text_black"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:drawablePadding="10dp" />-->
    <!--</RelativeLayout>-->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_2"
                    android:background="@drawable/base_horizontal_line" >
                </View>
    <RelativeLayout
        android:id="@+id/layout_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >
        <!--android:background="@drawable/about_mid_bg"-->

        <TextView
            style="@style/style_text_black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textSize="20dp"
            android:text="@string/add_sex" />
        <TextView
            android:id="@+id/tv_sex"
            style="@style/style_text_black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:drawablePadding="10dp"
            android:text="男"/>
    </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_2"
                    style="@style/my_view" >
                </View>
                <!--android:background="#55999999"-->
    <RelativeLayout
        android:id="@+id/layout_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <TextView
            style="@style/style_text_black"
            android:textSize="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_age" />
        <TextView
            android:id="@+id/tv_age"
            style="@style/style_text_black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:drawablePadding="10dp"
            android:text="21"/>
    </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_2"
                    style="@style/my_view" >
                </View>

    <RelativeLayout
        android:id="@+id/layout_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <TextView
            style="@style/style_text_black"
            android:textSize="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_birth" />
        <TextView
            android:id="@+id/tv_birth"
            style="@style/style_text_black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:drawablePadding="10dp"
            android:text="5月23日"/>
    </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_2"
                    android:background="@drawable/base_horizontal_line" >
                </View>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp">

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#eeeeee"
        android:gravity="bottom"
        android:orientation="horizontal">

    <Button
        android:id="@+id/btn_add_friend"
        style="@style/style_text_white"
        android:background="@drawable/btn_login_selector"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/add_friend"
        />

    <Button
        android:id="@+id/btn_send"
        style="@style/style_text_white"
        android:background="@drawable/btn_login_selector"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="发送时间表"
        />

        </LinearLayout>

</LinearLayout>